--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -1817,7 +1817,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_50">
              <property name="text">
-              <string>Nombre de séries avec état indéfini:</string>
+              <string>Nombre de saisons avec état indéfini:</string>
              </property>
             </widget>
            </item>
@@ -1845,7 +1845,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_41">
              <property name="text">
-              <string>Nombre de séries en cours:</string>
+              <string>Nombre de saisons en cours:</string>
              </property>
             </widget>
            </item>
@@ -1931,7 +1931,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_43">
              <property name="text">
-              <string>Nombre de séries à voir:</string>
+              <string>Nombre de saisons à voir:</string>
              </property>
             </widget>
            </item>
@@ -1972,7 +1972,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_42">
              <property name="text">
-              <string>Nombre de séries terminées:</string>
+              <string>Nombre de saisons terminées:</string>
              </property>
             </widget>
            </item>
@@ -2026,7 +2026,7 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label_47">
              <property name="text">
-              <string>Nombre de séries abandonnées:</string>
+              <string>Nombre de saisons abandonnées:</string>
              </property>
             </widget>
            </item>
